--- a/war/css/bootstrap.css
+++ b/war/css/bootstrap.css
@@ -389,7 +389,7 @@ a:focus {
 }
 
 .row-fluid {
-  /* width: 100%; */
+   width: 100%;
   *zoom: 1;
 }
 
